kubernetes/network-policy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello
  type: NodePort
